# kuryr-kubernetes

./: .coveragerc  .dockerignore  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  cni.Dockerfile  cni.spec  cni_builder  cni_builder.Dockerfile  cni_ds_init  cni_main.patch  cni_py3.Dockerfile  controller.Dockerfile  controller_py3.Dockerfile  k8s_client.patch  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.zuul.d/: base.yaml  k8s-np-e2e.yaml  lbaasv2.yaml  multi-vif.yaml  multinode.yaml  nodesets.yaml  octavia.yaml  project.yaml  sdn.yaml  tempest-jobs.yaml  tempest-multinode-jobs.yaml
contrib/: regenerate_controller_pod.sh  regenerate_pod_resources_api.sh  sctp_client.py
contrib/devstack-heat/: .gitignore  README.rst  devstack-heat  devstack_heat.py
contrib/devstack-heat/hot/: devstack_heat_template.yml  distro_deps.sh  networking_deployment.yaml  node.yaml  parameters.yml
contrib/devstack-heat/lib/: devstack-heat
contrib/kubectl_plugins/: README.rst
contrib/kubectl_plugins/kuryr/: kuryr  plugin.yaml
contrib/pools-management/: README.rst  subports.py
contrib/testing/container/: Dockerfile  build.sh  hostname.c
contrib/vagrant/: README.md  README.rst  Vagrantfile  devstack.sh  vagrant.sh
contrib/vagrant/config/: kuryr_rc
devstack/: devstackgaterc  gate_hook.sh  kubectl  local.conf.df.sample  local.conf.odl.sample  local.conf.openshift.sample  local.conf.ovn.sample  local.conf.ovs.sample  local.conf.pod-in-vm.overcloud.sample  local.conf.pod-in-vm.undercloud.df.sample  local.conf.pod-in-vm.undercloud.odl.sample  local.conf.pod-in-vm.undercloud.ovn.sample  local.conf.pod-in-vm.undercloud.sample  local.conf.sample  local.conf.worker.sample  plugin.sh  settings
devstack/lib/: kubernetes  kuryr_kubernetes
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  nested_vlan_mode.rst  usage.rst
etc/: README-config.txt  kuryr-k8s-config-generator.conf
etc/oslo-config-generator/: kuryr.conf
hooks/: hook-backports.ssl_match_hostname.py  hook-dns.py  hook-kuryr_kubernetes.cni.binding.py  hook-os_vif.py  hook-pyroute2.py  hook-vif_plug_linux_bridge.py  hook-vif_plug_ovs.py
kubernetes_crds/: kuryrloadbalancer.yaml  kuryrnet.yaml  kuryrnetpolicy.yaml  network_attachment_definition_crd.yaml
kubernetes_crds/kuryr_crds/: kuryrloadbalancer.yaml  kuryrnet.yaml  kuryrnetpolicy.yaml  kuryrnetwork.yaml  kuryrnetworkpolicy.yaml  kuryrport.yaml
kuryr_cni/: Gopkg.toml  README  go.mod  go.sum  main.go  ovo.go
kuryr_cni/hack/: build-go.sh
kuryr_cni/pkg/: main.go
kuryr_kubernetes/: __init__.py  clients.py  config.py  constants.py  exceptions.py  health.py  k8s_client.py  linux_net_utils.py  opts.py  os_vif_plug_noop.py  os_vif_util.py  server.py  utils.py  version.py  watcher.py  watchers.py
kuryr_kubernetes/aio/: headers.py  methods.py  streams.py
kuryr_kubernetes/cmd/: __init__.py  cni.py  daemon.py  sanity_checks.py  status.py
kuryr_kubernetes/cni/: api.py  handlers.py  health.py  main.py  prometheus_exporter.py  utils.py
kuryr_kubernetes/controller/: service.py
kuryr_kubernetes/handlers/: asynchronous.py  base.py  dispatch.py  health.py  k8s_base.py  logging.py  retry.py
kuryr_kubernetes/objects/: __init__.py  base.py  fields.py  lbaas.py  route.py  vif.py
kuryr_kubernetes/platform/: constants.py
kuryr_kubernetes/pod_resources/: api.proto  api_pb2.py  api_pb2_grpc.py  client.py
kuryr_kubernetes/tests/: base.py  fake.py  test_kuryr_kubernetes.py
kuryr_kubernetes/translators/: base.py  port.py
kuryr_kubernetes/watchers/: base.py  pod.py
playbooks/: copy-crio-logs.yaml  copy-k8s-logs.yaml  e2e-tests.patch  get_amphora_tarball.yaml  run_k8s_e2e_tests.yaml
playbooks/kuryr-kubernetes-install-base/: run.yaml
playbooks/tempest-kuryr-kubernetes-base/: run.yaml
playbooks/tempest-kuryr-kubernetes-multinode/: run.yaml
releasenotes/notes/: active-passive-ha-cfbda8e6b527b48e.yaml  add-tagging-ce56231f58bf7ad0.yaml  bp-openshift-router-support-5f28108b39a2826f.yaml  change-cni-daemon-default-port-e968a83fa1bf30b5.yaml  changing-default-url-for-k8s-api-42c3b90183783291.yaml  cni-health-checks-d2b70f2f2551a9fc.yaml  containerization-2fba4dac5c097b19.yaml  cri-o-support-ab7e810775754ea7.yaml  deprecate-handlers-caching-9cdfd772aba9a7ce.yaml  deprecate-non-daemonized-6dd2154238b1628c.yaml  deprecate-sg-mode-option-96824c33335cd74b.yaml  deprecate-worker-nodes-subnet-e452c84df5b5ed5c.yaml  deprecate_lbaasv2-a524aedf5d3a36bc.yaml  drop-ingress-d78a7a9be8f20da1.yaml  drop-py27-60f55b6bc1d082bc.yaml  fault-tolerable-watcher-24c51dbccabf5f17.yaml  golang-kuryr-cni-aab144831d4dc9dd.yaml  k8s-client-token-default-882ec49d1faffc29.yaml  kuryr-daemon-f09075b9eb60388f.yaml  make-ext-subnet-optional-99e73bfcbde96c22.yaml  make-handlers-pluggable-844475484771ffd6.yaml  make-lbaas-timeout-configurable-8624ea32971c0cbe.yaml  make-listener-timeouts-configurable-f563d85eg6c6fe6d.yaml  multivif-pools-1cec757c77a8c4f8.yaml  network-device-mtu-default-90faa7d685d4d0ec.yaml  network-namespace-2353f8013be398cd.yaml  network-policy-support-5807fcbc27a890ad.yaml  network-policy-support-on-services-without-selectors-fea06ab71a8a6f2a.yaml  octavia-acls-7452d3406d75ea15.yaml  oslo-caching-b11881cfb9dc306c.yaml  remove-non-daemon-836e4825384b1b88.yaml  remove-physical-device-mapping-15d614b70c68fc73.yaml  remove-run-server-aca25a2d9d723dc7.yaml  remove-sriov-5f44deb951264510.yaml  remove-worker_nodes_subnet-3e64510c0342e739.yaml  reusable-pool-drivers-00e7fdc1f4738441.yaml  started-using-reno-90dbe9da108ec5c4.yaml  stein-upgrade-226c8e7b735701ee.yaml  support-specify-project-by-namespace-annotation-18bc6eca729bff5e.yaml  svc-without-selectors-f36bab0883459b80.yaml  (+1 more)
releasenotes/source/: README.rst  conf.py  index.rst  queens.rst  stein.rst
scripts/: run_server.py
tools/: build_cni_daemonset_image  generate_config_file_samples.sh  generate_k8s_resource_definitions.sh
tools/gate/: copy_crio_logs.sh  copy_k8s_logs.sh
(+188 files in other folders)
