[metadata]
name = kuryr-kubernetes
summary = Kubernetes integration with OpenStack networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/kuryr-kubernetes/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
oslo.config.opts =
    kuryr_kubernetes = kuryr_kubernetes.opts:list_kuryr_opts
    kuryr_lib = kuryr.lib.opts:list_kuryr_opts

console_scripts =
    kuryr-k8s-controller = kuryr_kubernetes.cmd.eventlet.controller:start

kuryr_kubernetes.controller.drivers.pod_project =
    default = kuryr_kubernetes.controller.drivers.default_project:DefaultPodProjectDriver

[files]
packages =
    kuryr_kubernetes

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kuryr-kubernetes/locale
domain = kuryr-kubernetes

[update_catalog]
domain = kuryr-kubernetes
output_dir = kuryr-kubernetes/locale
input_file = kuryr-kubernetes/locale/kuryr-kubernetes.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kuryr-kubernetes/locale/kuryr-kubernetes.pot
