[metadata]
name = kuryr-kubernetes
summary = Kubernetes integration with OpenStack networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/kuryr-kubernetes/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
oslo.config.opts =
    kuryr_kubernetes = kuryr_kubernetes.opts:list_kuryr_opts
    kuryr_lib = kuryr.lib.opts:list_kuryr_opts

os_vif =
    noop = kuryr_kubernetes.os_vif_plug_noop:NoOpPlugin

console_scripts =
    kuryr-k8s-controller = kuryr_kubernetes.cmd.eventlet.controller:start
    kuryr-cni = kuryr_kubernetes.cmd.cni:run

kuryr_kubernetes.vif_translators =
    ovs = kuryr_kubernetes.os_vif_util:neutron_to_osvif_vif_ovs
    noop = kuryr_kubernetes.os_vif_util:neutron_to_osvif_vif_nested

kuryr_kubernetes.cni.binding =
    VIFBridge = kuryr_kubernetes.cni.binding.bridge:BridgeDriver
    VIFOpenVSwitch = kuryr_kubernetes.cni.binding.bridge:VIFOpenVSwitchDriver
    VIFVlanNested = kuryr_kubernetes.cni.binding.nested:VlanDriver

kuryr_kubernetes.controller.drivers.pod_project =
    default = kuryr_kubernetes.controller.drivers.default_project:DefaultPodProjectDriver

kuryr_kubernetes.controller.drivers.service_project =
    default = kuryr_kubernetes.controller.drivers.default_project:DefaultServiceProjectDriver

kuryr_kubernetes.controller.drivers.pod_subnets =
    default = kuryr_kubernetes.controller.drivers.default_subnet:DefaultPodSubnetDriver

kuryr_kubernetes.controller.drivers.service_subnets =
    default = kuryr_kubernetes.controller.drivers.default_subnet:DefaultServiceSubnetDriver

kuryr_kubernetes.controller.drivers.pod_security_groups =
    default = kuryr_kubernetes.controller.drivers.default_security_groups:DefaultPodSecurityGroupsDriver

kuryr_kubernetes.controller.drivers.service_security_groups =
    default = kuryr_kubernetes.controller.drivers.default_security_groups:DefaultServiceSecurityGroupsDriver

kuryr_kubernetes.controller.drivers.pod_vif =
    neutron-vif = kuryr_kubernetes.controller.drivers.neutron_vif:NeutronPodVIFDriver
    nested-vlan = kuryr_kubernetes.controller.drivers.nested_vlan_vif:NestedVlanPodVIFDriver

kuryr_kubernetes.controller.drivers.endpoints_lbaas =
    lbaasv2 = kuryr_kubernetes.controller.drivers.lbaasv2:LBaaSv2Driver

kuryr_kubernetes.controller.drivers.vif_pool =
    noop = kuryr_kubernetes.controller.drivers.vif_pool:NoopVIFPool

[files]
packages =
    kuryr_kubernetes

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kuryr-kubernetes/locale
domain = kuryr-kubernetes

[update_catalog]
domain = kuryr-kubernetes
output_dir = kuryr-kubernetes/locale
input_file = kuryr-kubernetes/locale/kuryr-kubernetes.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kuryr-kubernetes/locale/kuryr-kubernetes.pot
