[metadata]
name = kuryr-kubernetes
summary = Kubernetes integration with OpenStack networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/kuryr-kubernetes/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[entry_points]
oslo.config.opts =
    kuryr_kubernetes = kuryr_kubernetes.opts:list_kuryr_opts
    kuryr_lib = kuryr.lib.opts:list_kuryr_opts

os_vif =
    noop = kuryr_kubernetes.os_vif_plug_noop:NoOpPlugin
    sriov = kuryr_kubernetes.os_vif_plug_noop:SriovPlugin

console_scripts =
    kuryr-k8s-controller = kuryr_kubernetes.cmd.eventlet.controller:start
    kuryr-daemon = kuryr_kubernetes.cmd.daemon:start
    kuryr-cni = kuryr_kubernetes.cmd.cni:run
    kuryr-k8s-status = kuryr_kubernetes.cmd.status:main

kuryr_kubernetes.vif_translators =
    ovs = kuryr_kubernetes.os_vif_util:neutron_to_osvif_vif_ovs
    sriov = kuryr_kubernetes.os_vif_util:neutron_to_osvif_vif_sriov

kuryr_kubernetes.cni.binding =
    VIFBridge = kuryr_kubernetes.cni.binding.bridge:BridgeDriver
    VIFOpenVSwitch = kuryr_kubernetes.cni.binding.bridge:VIFOpenVSwitchDriver
    VIFVlanNested = kuryr_kubernetes.cni.binding.nested:VlanDriver
    VIFMacvlanNested = kuryr_kubernetes.cni.binding.nested:MacvlanDriver
    VIFSriov = kuryr_kubernetes.cni.binding.sriov:VIFSriovDriver

kuryr_kubernetes.controller.drivers.pod_project =
    default = kuryr_kubernetes.controller.drivers.default_project:DefaultPodProjectDriver

kuryr_kubernetes.controller.drivers.service_project =
    default = kuryr_kubernetes.controller.drivers.default_project:DefaultServiceProjectDriver

kuryr_kubernetes.controller.drivers.namespace_project =
    default = kuryr_kubernetes.controller.drivers.default_project:DefaultNamespaceProjectDriver

kuryr_kubernetes.controller.drivers.network_policy_project =
    default = kuryr_kubernetes.controller.drivers.default_project:DefaultNetworkPolicyProjectDriver

kuryr_kubernetes.controller.drivers.pod_subnets =
    default = kuryr_kubernetes.controller.drivers.default_subnet:DefaultPodSubnetDriver
    namespace = kuryr_kubernetes.controller.drivers.namespace_subnet:NamespacePodSubnetDriver

kuryr_kubernetes.controller.drivers.service_subnets =
    default = kuryr_kubernetes.controller.drivers.default_subnet:DefaultServiceSubnetDriver

kuryr_kubernetes.controller.drivers.pod_security_groups =
    default = kuryr_kubernetes.controller.drivers.default_security_groups:DefaultPodSecurityGroupsDriver
    namespace = kuryr_kubernetes.controller.drivers.namespace_security_groups:NamespacePodSecurityGroupsDriver
    policy = kuryr_kubernetes.controller.drivers.network_policy_security_groups:NetworkPolicySecurityGroupsDriver

kuryr_kubernetes.controller.drivers.service_security_groups =
    default = kuryr_kubernetes.controller.drivers.default_security_groups:DefaultServiceSecurityGroupsDriver
    namespace = kuryr_kubernetes.controller.drivers.namespace_security_groups:NamespaceServiceSecurityGroupsDriver
    policy =  kuryr_kubernetes.controller.drivers.network_policy_security_groups:NetworkPolicyServiceSecurityGroupsDriver

kuryr_kubernetes.controller.drivers.network_policy =
    default = kuryr_kubernetes.controller.drivers.network_policy:NetworkPolicyDriver

kuryr_kubernetes.controller.drivers.pod_vif =
    neutron-vif = kuryr_kubernetes.controller.drivers.neutron_vif:NeutronPodVIFDriver
    nested-vlan = kuryr_kubernetes.controller.drivers.nested_vlan_vif:NestedVlanPodVIFDriver
    nested-macvlan = kuryr_kubernetes.controller.drivers.nested_macvlan_vif:NestedMacvlanPodVIFDriver
    sriov = kuryr_kubernetes.controller.drivers.sriov:SriovVIFDriver

kuryr_kubernetes.controller.drivers.endpoints_lbaas =
    lbaasv2 = kuryr_kubernetes.controller.drivers.lbaasv2:LBaaSv2Driver

kuryr_kubernetes.controller.drivers.service_public_ip =
    neutron_floating_ip = kuryr_kubernetes.controller.drivers.lb_public_ip:FloatingIpServicePubIPDriver

kuryr_kubernetes.controller.drivers.vif_pool =
    noop = kuryr_kubernetes.controller.drivers.vif_pool:NoopVIFPool
    neutron = kuryr_kubernetes.controller.drivers.vif_pool:NeutronVIFPool
    nested = kuryr_kubernetes.controller.drivers.vif_pool:NestedVIFPool
    multi_pool = kuryr_kubernetes.controller.drivers.vif_pool:MultiVIFPool

kuryr_kubernetes.controller.handlers =
    vif = kuryr_kubernetes.controller.handlers.vif:VIFHandler
    lbaasspec = kuryr_kubernetes.controller.handlers.lbaas:LBaaSSpecHandler
    lb = kuryr_kubernetes.controller.handlers.lbaas:LoadBalancerHandler
    namespace = kuryr_kubernetes.controller.handlers.namespace:NamespaceHandler
    ingresslb = kuryr_kubernetes.controller.handlers.ingress_lbaas:IngressLoadBalancerHandler
    ocproute  = kuryr_kubernetes.platform.ocp.controller.handlers.route:OcpRouteHandler
    policy = kuryr_kubernetes.controller.handlers.policy:NetworkPolicyHandler
    pod_label = kuryr_kubernetes.controller.handlers.pod_label:PodLabelHandler
    kuryrnetpolicy = kuryr_kubernetes.controller.handlers.kuryrnetpolicy:KuryrNetPolicyHandler
    test_handler = kuryr_kubernetes.tests.unit.controller.handlers.test_fake_handler:TestHandler

kuryr_kubernetes.controller.drivers.multi_vif =
    noop = kuryr_kubernetes.controller.drivers.multi_vif:NoopMultiVIFDriver
    npwg_multiple_interfaces = kuryr_kubernetes.controller.drivers.multi_vif:NPWGMultiVIFDriver

[files]
packages =
    kuryr_kubernetes

[compile_catalog]
directory = kuryr-kubernetes/locale
domain = kuryr-kubernetes

[update_catalog]
domain = kuryr-kubernetes
output_dir = kuryr-kubernetes/locale
input_file = kuryr-kubernetes/locale/kuryr-kubernetes.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kuryr-kubernetes/locale/kuryr-kubernetes.pot
